--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -85,7 +85,9 @@ const hasUpd = !!upd;
       .hero-image {
         width: 100%;
         margin: 0 auto 0.75rem;
+        text-align: center; /* centers portrait images horizontally */
       }
+
       .hero-image img {
         display: block;
         width: 100%;
